@@ -15,11 +15,15 @@ Tommy McCabe			rocketjet314@yahoo.com
 
 ---------------------------------------------------------------------------
 
-Wed Jun 08 03:47:56 CST 2004	Tommy McCabe <rocketjet314@yahoo.com>
+Wed Jun 09 08:21:32 CST 2004	Miguel Bolanos <mike@linuxlabs.com>
+
+	* Included swapon back into cvs :)
+
+Wed Jun 09 03:47:56 CST 2004	Tommy McCabe <rocketjet314@yahoo.com>
 
 	* Included ktcp in full5
 
-Wed Jun 08 03:45:34 CST 2004	Miguel Bolanos <mike@linuxlabs.com>
+Wed Jun 09 03:45:34 CST 2004	Miguel Bolanos <mike@linuxlabs.com>
 	
 	* Added e3
 
